--- a/pages/search/search-horizontal.wxss
+++ b/pages/search/search-horizontal.wxss
@@ -60,7 +60,7 @@
   height: 25.124rpx;
   line-height: 25.124rpx;
   border-radius: 25.124rpx;
-  background: #ffac2d;
+  background: #dc5e4e;
   color:#060401;
   font-size: 11.8rpx;
   position: fixed;
@@ -101,7 +101,7 @@
 }
 
 /* 卡片的样式 */
-.halbumCard {
+ .halbumCard {
   /* flex: 0 0 46.6vh; */
   width: 33.81vh;
   display: inline-block;
@@ -170,24 +170,33 @@ button[focus-select=true]{
   padding-right: 20px;
 }
 .h .remindresultView{
-  /* display:flex; */
+  display:flex;
   flex-direction:column;
   flex-wrap: wrap;
   margin-left: 0vh;
-  width: 100%;
-  /* background: red; */
+  width: 50%;
+
+   height:48vh ;
+   /* line-height: 47vh;   */
+  /* background: red;  */
 
 
 }
 .h .reminditem{
+/* <<<<<<< Updated upstream
+======= */
+  /* margin-top: 3vh; */
+  margin-right: 15vh;
+  width: 55vh;
+  height: 15vh;
   /* color: #ffffff; */
-  font-weight: 500;
+  /* font-weight: 500;
   /* background: blue; */
-  text-align: left;
-  float: left;
+  /* text-align: left; */
+  /* float: left; */
   /* line-height: 0; */
-  display: flex;
-  padding-right: 15px;
+  /* display: flex; */
+  /* padding-right: 15px; */ 
 }
 .h .item-num{
   /* display: inline-block; */
@@ -213,6 +222,18 @@ button[focus-select=true]{
   font-weight: 550;
 
 }
+.h .deleteimg{
+  /* position: absolute;
+  top: 29vh;
+  left: 34vh; */
+  margin-left: 2vh;
+  width: 8vh;
+  height: 8vh;
+  vertical-align: middle;
+  /* background: red; */
+
+}
+
 /* 最近搜索 */
 .noSearch {
   display: flex;
