--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -12,11 +12,11 @@
         <image wx:if="{{keyWord != ''}}" catchtap="clear" src="../../images/modal_close.png" alt=""  style="width: {{10 * times}}px; height: {{10 * times}}px;  margin: 0 {{2 * times}}px;"/>
 
       </view>
-      <button class="cancel" wx:if="{{keyWord}}" bindtap="search"
+      <button class="cancel" wx:if="{{keyWord}}" bindtap="searchClick"
       data-focusindex="2" 
       style="width: {{20 * times}}px; height: {{9.8 * times}}px;  line-height: {{9.8 * times}}px; border-radius: {{9.8 * times}}px; font-size: {{4.6 * times}}px; left: {{141 * times}}px; top: {{4.6 * times}}px;">搜索</button>
       
-      <view wx:if="{{info.length == 0}}"  class="remindTitle">推荐搜索</view>
+      <!-- <view wx:if="{{info.length == 0}}"  class="remindTitle">推荐搜索</view> -->
 
       <view class="label-view" wx:if="{{info.length>0}}" style="top: {{19.5 * times}}px; left: {{9 * times}}px; margin-bottom: {{4.89 * times}}px;  font-size: {{5.5 * times}}px;">
         <view class="title{{index === currentTap ? ' active-tap' : ''}}" wx:for="{{labels}}" data-focusindex="3"  wx:key="index" data-index="{{index}}" bindtap="selectTap" 
@@ -28,9 +28,12 @@
 
       <!-- 没有搜索的情况 -->
       <view class="noSearch" style="margin-top: {{19 * times}}px;">
-        <view class="recentSearch" style="width: {{66 * times}}px">
-          <view wx:if="{{info.length == 0}}" style="font-size: {{5.4 * times}}px;margin-bottom: {{8 * times}}px" class="remindTitle">最近搜索</view>
-          <view class="recentItem"
+        <view  wx:if="{{recentSearch.length > 0}}" class="recentSearch" style="width: {{66 * times}}px">
+          <view wx:if="{{info.length == 0}}" style="font-size: {{5.4 * times}}px;margin-bottom: {{8 * times}}px" class="remindTitle">
+            <text>最近搜索</text>
+            <image catchtap="deletaClick" src="../../images/delete.png" class="deleteimg"></image>
+          </view>
+          <view data-idx="{{index}}"  wx:key="laterkey" catchtap="latersearchItemClick" class="recentItem"
           style="font-size: {{4.8 * times}}px;width: {{32 * times}}px;height: {{15 * times}}px"
           wx:if="{{info.length == 0}}" wx:for="{{recentSearch}}">{{item}}</view>
         </view>
@@ -76,6 +79,6 @@
 </view>
 
 <!-- 加入没有数据 -->
-<view class="noData" style="top: {{50 * times}}px" wx:if="{{!info.length && keyWord}}">暂无内容</view>
+<!-- <view class="noData" style="top: {{50 * times}}px" wx:if="{{!info.length && keyWord}}">暂无内容</view> -->
 
 
