--- a/pages/abumInfo/abumInfo.wxml
+++ b/pages/abumInfo/abumInfo.wxml
@@ -97,6 +97,6 @@
 </view>
 
 <selectWorks id="selectWorks" bindchangeWords="changeWords" selected="{{selected}}" pageSize="{{pageSize}}"> </selectWorks>
-<mini-player id="miniPlayer" songInfo="{{songInfo}}" bindcurrent="changeCurrent" bindsetPlaying="setPlaying"></mini-player>
+<mini-player bindshowExisted ="showExisted" existed="{{existed}}" id="miniPlayer" songInfo="{{songInfo}}" bindcurrent="changeCurrent" bindsetPlaying="setPlaying"></mini-player>
 <bgConfirm id="bgConfirm" msg="{{msg}}" confirm="确定" cancel=""></bgConfirm>
 <log></log>
