--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -66,6 +66,6 @@
   </scroll-view>
 
   <bgConfirm id="bgConfirm" msg="{{confirm}}" confirm="确定" cancel=""></bgConfirm>
-  <mini-player id="miniPlayer" songInfo="{{songInfo}}"></mini-player>
+  <mini-player existed="{{existed}}"  id="miniPlayer" songInfo="{{songInfo}}"></mini-player>
 </view>
 <log></log>
