--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -64,7 +64,7 @@
         data-disablefocus="true"
         style="width: {{33.7 * times}}px; height: {{68.6 * times}}px; margin-top: {{31.5 * times}}px">
         <image class="image" src="{{item.coverImgUrl}}"
-        data-focusindex="4" bindtap="linkAbumInfo"
+        data-focusindex="4" 
         style="width: {{33.7 * times}}px; height: {{33.7 * times}}px; border-radius: {{2 * times}}px;"></image>
         <view class="albumTit" style=" margin-top: {{2 * times}}px; font-size: {{5.2 * times}}px;">
           <text>{{ item.title }}</text>
