--- a/pages/latelyListen/latelyListen.wxml
+++ b/pages/latelyListen/latelyListen.wxml
@@ -13,7 +13,7 @@
       <view class="storyBox">
         <story wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
           data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}"
-          data-contentype="{{item.contentType}}" bindtap="linkAbumInfo" datasource="{{item}}" countpic="{{countPic}}"
+          data-contentype="{{item.contentType}}" bindtap="linkAbumInfo" datasource="{{item}}"  likePic="{{likePic}}"  countpic="{{countPic}}"
           className="{{screen}}"></story>
 
         <!-- 加载中盒子 -->
