--- a/components/selectWorks/index.wxml
+++ b/components/selectWorks/index.wxml
@@ -13,7 +13,7 @@
 
 <view class="contentWorks" animation="{{animation}}">
     
-    <view class="orders" bindtap="changeOrder">
+    <view data-order="{{order}}"  class="orders" bindtap="changeOrder">
       {{order ? '正序' : '倒序'}}排列
       <image class="orderIcon" src="/images/{{order ? 'icon_down' : 'icon_up'}}.png"></image>
     </view>
@@ -24,6 +24,9 @@
         wx:for="{{data}}" 
         wx:key="index" 
         data-index="{{index}}"
+        data-order="{{order}}"
+        data-start="{{item.start}}"
+         data-end="{{item.end}}"
         bindtap="selectThis"  
       >
       <!-- {{m1.filterNo(item.start, item.end, pageSize)}} - {{selected}} -->
