--- a/pages/like/like.wxml
+++ b/pages/like/like.wxml
@@ -12,9 +12,8 @@
       <!-- 页面盒子 -->
       <view class="storyBox">
         <story wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
-          data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}"
-          data-contentype="{{item.contentType}}" bindtap="linkAbumInfo" datasource="{{item}}" likePic="{{likePic}}"
-          bind:clickHadle="like" bind:clickHadle="playMedia" className="{{screen}}"></story>
+          data-id="{{item.id}}"  datasource="{{item}}"  bind:clickHadle="likeOne"  className="{{screen}}">
+          </story>
 
         <!-- 加载中盒子 -->
         <view class="albumCard" wx:if="{{!req}}" wx:for="{{5}}" wx:key="index">
