--- a/components/selectWorks/index.wxml
+++ b/components/selectWorks/index.wxml
@@ -14,9 +14,9 @@
 <view class="contentWorks" animation="{{animation}}">
     
     <view data-order="{{order}}"  class="orders" bindtap="changeOrder">
-      {{order ? '正序' : '倒序'}}排列
-      <image class="orderIcon" src="/images/{{order ? 'icon_down' : 'icon_up'}}.png"></image>
-    </view>
+      <!-- {{order ? '正序' : '倒序'}}排列
+      <image class="orderIcon" src="/images/{{order ? 'icon_down' : 'icon_up'}}.png"></image> -->
+    </view> 
     <image class="closeWords" src="/images/close-words.png" bindtap="closeWords"></image>
     <view class="worksList">
       <view 
