--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -34,9 +34,9 @@
      
       <!-- 页面盒子 -->
       <view style="margin-top:0vh" class="storyBox">
-        <story wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
+        <categoryItem  wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
         data-id="{{item.id}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" bindtap="linkAbumInfo"
-        datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></story>
+        datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></categoryItem>
       </view>
       
     </view>
