--- a/pages/latelyListen/latelyListen.wxml
+++ b/pages/latelyListen/latelyListen.wxml
@@ -11,10 +11,10 @@
       </view>
       <!-- 页面盒子 -->
       <view class="storyBox">
-        <story wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
+        <categoryItem wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
           data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}"
           data-contentype="{{item.contentType}}" bindtap="linkAbumInfo" datasource="{{item}}"  likePic="{{likePic}}"  countpic="{{countPic}}"
-          className="{{screen}}"></story>
+          className="{{screen}}"></categoryItem>
 
         <!-- 加载中盒子 -->
         <view class="albumCard" wx:if="{{!req}}" wx:for="{{5}}" wx:key="index">
