--- a/pages/like/like.wxml
+++ b/pages/like/like.wxml
@@ -11,8 +11,9 @@
       </view>
       <!-- 页面盒子 -->
       <view class="storyBox">
-        <story wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
-          data-id="{{item.id}}"  datasource="{{item}}"  bind:clickHadle="likeOne"  className="{{screen}}">
+        <story wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index"  data-no="{{index}}"
+          data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}"
+          data-contentype="{{item.contentType}}"  catchclickHadle="likeOne"  bindtap="linkAbumInfo" datasource="{{item}}"  likePic="{{likePic}}"   className="{{screen}}">
           </story>
 
         <!-- 加载中盒子 -->
