--- a/pages/abumInfo/abumInfo.wxml
+++ b/pages/abumInfo/abumInfo.wxml
@@ -39,7 +39,7 @@
       <view bindtap="goPlayInfo" style="color: {{item.id === currentId ? mainColor : '#fff'}};display: flex" data-song='{{item}}' data-no='{{index}}' wx:key="index" wx:for="{{canplay}}">
         <image class="playGif" wx:if="{{item.id === currentId && playing}}" src="/images/playing.gif" />
         
-        <text wx:if="{{sort == 'asc' && (item.id !== currentId || !playing)}}">{{start + index }}</text>
+        <text wx:if="{{sort == 'asc' && (item.id !== currentId || !playing)}}">{{start + index + 1 }}</text>
         <text wx:if="{{sort == 'desc' && (item.id !== currentId || !playing)}}">{{start-index }}</text>
 
         <text class="audition" style="margin-right:3vh;border-radius:4vh;color:{{mainColor}};border: 1px solid {{mainColor}};width:16vh;text-align:center;line-height:7vh;height:7vh" wx:if="{{item.feeType }}">试听</text>
