--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -50,7 +50,7 @@
       </view> -->
       <!-- 页面盒子 -->
       <view class="storyBox">
-        <story id="story{{item.id}}" wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
+        <story id="story{{item.id}}" class="story" wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
         data-id="{{item.id}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" catchclickHadle="clickHadle"  catchtap="linkAbumInfo"
         datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></story>
       </view>
