--- a/pages/index/index-horizontal.wxss
+++ b/pages/index/index-horizontal.wxss
@@ -183,3 +183,13 @@
   height: 9.81vh;
   margin-left: 6.12vh;
 }
+.halbumCard[focus-select=true]{
+  /* box-shadow: inset 4px 4px #dc5e4e, inset -4px -4px #dc5e4e; */ 
+   /* border-bottom: 2px solid #dc5e4e; */
+ 
+ } 
+.halbumCard{ 
+  /* box-shadow: inset 4px 4px #dc5e4e, inset -4px -4px #dc5e4e; */ 
+   /* border-bottom: 2px solid #dc5e4e;  */
+ 
+}
