--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -4,7 +4,7 @@
 <scroll-view  class="topscrollview" scroll-x="true" scroll-left="{{scrollLeft}}" lower-threshold="1920">
   <view class="label-box" wx:if="{{labels.show}}">
         <view class="label-view {{ isFixed ? 'fixeds' : 'absolutes' }}" wx:if="{{reqS}}">
-          <view class="title" wx:for="{{labels.data}}" wx:key="index" style="color: {{index === currentTap ? mainColor : '#bebebe'}}" 
+          <view data-focusindex='1' class="title" wx:for="{{labels.data}}" wx:key="index" style="color: {{index === currentTap ? mainColor : '#bebebe'}}" 
             data-index="{{index}}"  data-groupid="{{item.id}}" data-name="{{item.name}}" bindtap="selectTap">
             <text class="vip" wx:if="{{item.isVip}}" style="background-color:{{mainColor}}">VIP</text>
             <text>{{item.name}}</text>
@@ -34,7 +34,7 @@
      
       <!-- 页面盒子 -->
       <view style="margin-top:0vh" class="storyBox">
-        <categoryItem  wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
+        <categoryItem class="cateitem"  data-focusindex='2' wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
         data-id="{{item.id}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" bindtap="linkAbumInfo"
         datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></categoryItem>
       </view>
