--- a/pages/category/category-horizontal.wxss
+++ b/pages/category/category-horizontal.wxss
@@ -140,12 +140,10 @@
 
 .cateitem[focus-select=true]{
   /* box-shadow: inset 4px 4px #dc5e4e, inset -4px -4px #dc5e4e; */
-  border-bottom: 2px solid #dc5e4e;
+  /* border-bottom: 2px solid #dc5e4e; */
  
 }
-/* .halbumCard[focus-select=true]{
-  border-bottom: 2px solid #dc5e4e;
  
-} */
+
 
 
