--- a/components/story/index.wxml
+++ b/components/story/index.wxml
@@ -1,4 +1,4 @@
-<view class="{{className}}albumCard" style="width: {{picWidth}}">
+<view data-focusindex='1' class="{{className}}albumCard" style="width: {{picWidth}}">
   <image class="image" src="{{datasource.src}}"></image>
   <view class="linerbg">
   </view>
