--- a/pages/abumInfo/abumInfo.wxml
+++ b/pages/abumInfo/abumInfo.wxml
@@ -47,9 +47,9 @@
         <text class="audition" style="margin-right:3vh;border-radius:4vh;color:{{mainColor}};border: 1px solid {{mainColor}};width:16vh;text-align:center;line-height:7vh;height:7vh" wx:if="{{!item.feeType &&  item.isVipFree }}">付费</text>
         <!-- <text style="max-width:70%">{{item.title}}</text> -->
 
-        <text style="max-width:70%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis">{{item.title}}</text>
+        <text style="max-width:70%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-left:{{item.isVipFree ? '0' : '7.35vh'}}" class="songname">{{item.title}}</text>
         <!-- <text class="playCount">{{m1.filterNum(item.playCount)}}</text> -->
-        <text style="margin-right:10vh">{{item.dt}}</text>
+        <text style="margin-right: {{item.isVipFree ? '0' : '10vh'}}">{{item.dt}}</text>
       </view>
       <view wx-if="{{showLoadEnd}}" class="loading">加载中...</view>
     </view>
