改分类接口

--- a/components/categoryItem/index.wxss
+++ b/components/categoryItem/index.wxss
@@ -92,7 +92,7 @@
 }
  .halbumCard{
   
-   border-bottom: 2px solid #dc5e4e;
+   /* border-bottom: 2px solid #dc5e4e; */
 } 
 
 .halbumCard[focus-select=true]{
