--- a/components/story/index.wxss
+++ b/components/story/index.wxss
@@ -90,7 +90,7 @@
  
 }
 .halbumCard{
-  border-bottom: 2px solid #dc5e4e;
+  /* border-bottom: 2px solid #dc5e4e; */
   /* box-shadow: inset 4px 4px #dc5e4e, inset -4px -4px #dc5e4e; */
 }
 .halbumCard[focus-select=true]{
